--- a/upload/admin/view/template/extension/payment/shoplemo.twig
+++ b/upload/admin/view/template/extension/payment/shoplemo.twig
@@ -74,7 +74,6 @@
 							<div class="alert alert-info">
 								<i class="fa fa-exclamation-circle"></i>
 								{{ callback_url }}
-								<button type="button" class="close" data-dismiss="alert">&times;</button>
 							</div>
 
 						</div>
@@ -188,7 +187,7 @@
 						<label class="col-sm-2 control-label" for="input-order-status">{{ shoplemoLang.paymentGeoZoneId }}</label>
 						<div class="col-sm-10">
 							<select name="payment_shoplemo_geo_zone_id" id="input-order-status-completed" class="form-control">
-								<option value='' selected>{{ shoplemoLang.paymentGeoZoneNull }}</option>
+								<option value='0' selected>{{ shoplemoLang.paymentGeoZoneNull }}</option>
 								{% for geo_zone in geo_zones %}
 									<option value="{{ geo_zone.geo_zone_id }}" {% if geo_zone.geo_zone_id == payment_shoplemo_geo_zone_id %} selected="selected" {% endif %}>{{ geo_zone.name }}</option>
 								{% endfor %}
