iframeResizer'da kullanılan loglamayı devre dışı bırak

--- a/upload/catalog/view/theme/default/template/extension/payment/shoplemo.twig
+++ b/upload/catalog/view/theme/default/template/extension/payment/shoplemo.twig
@@ -6,7 +6,7 @@
 	<script type="text/javascript">
 
 	setTimeout(function(){ 
-		iFrameResize({ log: true },'#shoplemoiframe');
+		iFrameResize({},'#shoplemoiframe');
 	}, 1000);
 
 	</script>
